--- a/browser/js/major-page/major.html
+++ b/browser/js/major-page/major.html
@@ -11,11 +11,15 @@
 		<button ng-repeat="year in years" class="btn btn-primary" ng-click="seeMap(year)" id="year-btn">
 			{{year}}
 		</button>
-		<div class="card" ng-repeat="(key, value) in fall">
-			<p>{{value}} </p>
-		</div>
-		<div class="card" ng-repeat="(key, value) in spring">
-			<p>{{value}} </p>
+		<div ng-if="checker ==  true">
+			<div class="card">
+				<p class="lead">Fall</p>	
+				<p ng-repeat="(key, value) in fall"> {{value.title}} | {{value.fulfills}} </p>
+			</div>
+			<div class="card">
+				<p class="lead">Spring</p>
+				<p ng-repeat="(key, value) in spring">{{value.title}} | {{value.fulfills}} </p>
+			</div>
 		</div>
 	</div>
 	
