--- a/browser/js/major-page/major.html
+++ b/browser/js/major-page/major.html
@@ -1,17 +1,17 @@
-<div class="container" id="home">
+<div class="container" id="home" ng-click="reveal()">
 	<section class="card">
-		<h1>Computer Science</h1>	
-		<p class="lead">The Major At Glance</p>
+		<h1>{{major.title}}</h1>
+		<p>{{major.description}}</p>	
 		<p>30 CUNY Commmon Core</p>
 		<p>12 Hunter Focus Credits</p>
-		<p>53 Major Credits</p>
-		<p>25 Elective Credits</p>
+		<p>{{major.credits}} Major Credits</p>
+		<p>{{major.elective}} Elective Credits</p>
 	</section>
 	<div class="card">
 		<button ng-repeat="year in years" class="btn btn-primary" ng-click="seeMap(year)" id="year-btn">
 			{{year}}
 		</button>
-		<div ng-if="checker ==  true">
+		<div>
 			<div class="card">
 				<p class="lead">Fall</p>	
 				<p ng-repeat="(key, value) in fall"> {{value.title}} | {{value.fulfills}} </p>
@@ -22,7 +22,5 @@
 			</div>
 		</div>
 	</div>
-	
-	
 
-</div>	
+ </div>	
